syntax = "proto3";

//import "google/protobuf/timestamp.proto";


option java_multiple_files = true;
option java_package = "org.example.AlmaOnline.server";
option java_outer_classname = "AlmaOnlineProto";
option objc_class_prefix = "AO";

package almaonline;

service AlmaOnline {

	rpc GetRestaurants(GetRestaurantsRequest) returns (stream GetRestaurantsResponse) {}

	rpc GetMenu(GetMenuRequest) returns (GetMenuResponse) {}

	rpc CreateDineInOrder(CreateDineInOrderRequest) returns (CreateDineInOrderResponse) {}

	rpc CreateDeliveryOrder(CreateDeliveryOrderRequest) returns (CreateDeliveryOrderResponse) {}

	rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {}

}

message OrderQuote {
	optional string id = 1;
	Date creationDate = 2;
	optional string customer = 3;
	repeated string lineItems = 4;
}

message DeliveryOrderQuote {
	optional string deliveryAddress = 1;
	OrderQuote quote = 2;
}

message DineInOrderQuote {
	Date reservationDate = 1;
	OrderQuote quote = 2;
}

message ItemInfo {
	optional string name = 1;
	double price = 2;
}

message Date {
	int32 year = 1;
	int32 month = 2;
	int32 day = 3;
}

message GetOrderResponse {
	optional string customer = 1;
	Date createDate = 2;
	repeated ItemInfo items = 3;
}


message GetOrderRequest {
	optional string restaurantId = 1;
	optional string orderId = 2;
}


message CreateDeliveryOrderResponse {

}

message CreateDeliveryOrderRequest {
	optional string restaurantId = 1;
	DeliveryOrderQuote quote = 2;
}

message CreateDineInOrderResponse {

}

message CreateDineInOrderRequest {
	optional string restaurantId = 1;
	DineInOrderQuote quote = 2;
}

message GetMenuResponse {
	map<string, double> items = 1;
}

message GetMenuRequest {
	optional string restaurantId = 1;
}

message GetRestaurantsRequest {
}

message GetRestaurantsResponse {
	optional string id = 1;
	optional string name = 2;
}

